Minor spacing fix.

--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #59a871;
   font-weight: bold;
 
-  line-height: 1.7;
+  line-height: 1;
   margin: 0.2em 0 0.25em;
   padding: 0;
 
@@ -156,7 +156,7 @@ img {
 }
 
 .masthead {
-  padding: 2em 0;
+  padding: 1em 0;
   border-bottom: 0.05em solid $lightGray;
 
   @include mobile {
